--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 
 		* {
 			background-color: gray;
+			font-family: "courier new";
+			color: white;
+		}
+
+		.header {
+			width: 1200px;
+			display: flex;
+			text-align: center;
 		}
 
 
